# internal/handlers/http_1_1/auth.go
@@ -47,7 +47,7 @@ func (h *RequestHandler) userSignIn(c *gin.Context) {
 		return
 	}
 
-	c.JSON(http.StatusOK, dataResponse{Data: token})
+	c.JSON(http.StatusOK, dataResponse{data: token})
 }
 
 type signUpInput struct {
@@ -85,7 +85,7 @@ func (h *RequestHandler) userSignUp(c *gin.Context) {
 		return
 	}
 
-	c.JSON(http.StatusCreated, dataResponse{Data: token})
+	c.JSON(http.StatusCreated, dataResponse{data: token})
 
 }
 
@@ -118,7 +118,7 @@ func (h *RequestHandler) userSignUpWithEmail(c *gin.Context) {
 		return
 	}
 
-	c.JSON(http.StatusCreated, dataResponse{Data: token})
+	c.JSON(http.StatusCreated, dataResponse{data: token})
 }
 
 func (h *RequestHandler) userRefreshAccess(c *gin.Context) {
