# internal/handlers/http_1_1/response.go
@@ -3,7 +3,18 @@ package http_1_1
 import "github.com/gin-gonic/gin"
 
 type dataResponse struct {
-	Data interface{}
+	data interface{}
+}
+
+type dataWithPaginationResponse struct {
+	data interface{}
+	meta metaParams
+}
+
+type metaParams struct {
+	page    int
+	perPage int
+	total   int
 }
 
 type errorResponse struct {
